--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,23 +1,30 @@
-%h1 Listing posts
+.row
+  .col-lg-8
+  .col-lg-2
+    =link_to 'Sign Up', new_user_registration_path
+    \|
+    =link_to 'Sign In', new_user_session_path
 
-%table
-  %tr
-    %th Title
-    %th Body
-    %th User
-    %th
-    %th
-    %th
+.row
+  .col-lg-12
+    %h1 Listing posts
 
-  - @posts.each do |post|
-    %tr
-      %td= post.title
-      %td= post.body
-      %td= post.user
-      %td= link_to 'Show', post
-      %td= link_to 'Edit', edit_post_path(post)
-      %td= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
+    %table.table
+      %tr
+        %th Title
+        %th User
+        %th
+        %th
+        %th
 
-%br
+      - @posts.each do |post|
+        %tr
+          %td= post.title
+          %td= post.user
+          %td= link_to 'Show', post
+          %td= link_to 'Edit', edit_post_path(post)
+          %td= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-= link_to 'New Post', new_post_path
+    %br
+
+    = link_to 'New Post', new_post_path
