--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,9 +2,17 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
   .field
+    =f.label :first_name, autofocus: true
+    %br/
+    = f.text_field :first_name
+  .field
+    =f.label :last_name
+    %br/
+    = f.text_field :last_name
+  .field
     = f.label :email
     %br/
-    = f.email_field :email, autofocus: true
+    = f.email_field :email
   .field
     = f.label :password
     - if @validatable
