--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,9 +1,12 @@
 .row
   .col-lg-8
   .col-lg-2
-    =link_to 'Sign Up', new_user_registration_path
-    \|
-    =link_to 'Sign In', new_user_session_path
+    -if current_user
+      =current_user.name
+    -else
+      =link_to 'Sign Up', new_user_registration_path
+      \|
+      =link_to 'Sign In', new_user_session_path
 
 .row
   .col-lg-12
