--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,6 +3,14 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
   .field
+    =f.label :first_name, autofocus: true
+    %br/
+    = f.text_field :first_name
+  .field
+    =f.label :last_name
+    %br/
+    = f.text_field :last_name
+  .field
     = f.label :email
     %br/
     = f.email_field :email, autofocus: true
@@ -25,7 +33,5 @@
     = f.password_field :current_password, autocomplete: "off"
   .actions
     = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
+
 = link_to "Back", :back
