--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,8 +1,10 @@
 .row
-  .col-lg-8
-  .col-lg-2
+  .col-md-8
+  .col-md-4
     -if current_user
-      =current_user.name
+      = link_to(current_user.name, edit_user_registration_path)
+      \|
+      = link_to('Logout', destroy_user_session_path, :method => :delete)
     -else
       =link_to 'Sign Up', new_user_registration_path
       \|
@@ -23,7 +25,7 @@
       - @posts.each do |post|
         %tr
           %td= post.title
-          %td= post.user
+          %td= post.user.name
           %td= link_to 'Show', post
           %td= link_to 'Edit', edit_post_path(post)
           %td= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
