--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,15 +1,15 @@
 %p#notice= notice
 
-%p
-  %b Title:
-  = @post.title
-%p
-  %b Body:
-  = @post.body
-%p
-  %b User:
-  = @post.user.name
-
-= link_to 'Edit', edit_post_path(@post)
-\|
-= link_to 'Back', posts_path
+%div
+  %p
+    %b Title:
+    = @post.title
+  %p
+    %b Body:
+    = @post.body
+  %p
+    %b User:
+    = @post.user.name
+%hr
+%div
+  =render partial: 'comments/form', locals: {post: @post}
