--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,21 +1,19 @@
 .row
-  .col-lg-12
+  .col-md-10
     %h1 All Posts
-
+  .col-md-2
+    = link_to '+ New Post', new_post_path
+.row
+  .col-md-12
     %table.table
       %tr
         %th Title
         %th User
-        %th
-        %th
-        %th
+        %th Actions
+
 
       - @posts.each do |post|
         %tr
           %td= post.title
           %td= post.user.name
           %td= link_to 'Show', post
-
-    %br
-
-    = link_to 'New Post', new_post_path
