--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,7 +2,8 @@
   .col-md-10
     %h1 All Posts
   .col-md-2
-    = link_to '+ New Post', new_post_path
+    -if current_user
+      = link_to '+ New Post', new_post_path
 .row
   .col-md-12
     %table.table
